--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,11 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+ion-menu ng-component.ion-page {
+  display: unset;
+}
+
+ion-menu ion-list {
+  height: 100%;
+}
